SEO Update | ADD Link

--- a/index.html
+++ b/index.html
@@ -1,34 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <!-- SEO  -->
-    <meta property="og:title" content="Kushal Pipaliya - Web Developer and Pentester">
-    <meta property="og:image" content="img/fmy2.png">
-    <meta property="og:url" content="https://kushalportfolio.vercel.app/">
-    <meta property="og:type" content="portfolio , website">
-    <meta property="og:site_name" content="KH.Pipaliya, kushal-portfolio">
-    <link rel="canonical" href="https://kushalportfolio.vercel.app/">
-    <meta name="robots" content="index, follow">
-    <meta name="keywords" content="kushal,kushal-portfolio,KH,kushal-pipaliya,kushal-pipaliya-portfolio,web-developer, ethical-hacker, penetration ,HTML, CSS, JavaScript, cybersecurity, front-end developer, back-end developer, full-stack developer, web-design, responsive design, user experience, programming, coding, software development, web security, network security, penetration tester, white hat hacker, cybersecurity specialist, HTML5, CSS3, Bootstrap, Tailwind CSS, React, Java, C#, PHP, Python, .NET, MySQL, ASP.Net, Servlet, .NET Core, scripting, Linux, Windows, problem-solving, communication skills">
-    <meta name="description" content="Explore the impressive portfolio of Kushal Pipaliya, a skilled Web Developer and Ethical Hacker. With expertise in HTML, CSS, JavaScript, C#, Java, Python, and more, I am dedicated to creating innovative digital solutions. Delve into my journey through academia, including a Bachelor's Degree in B.Sc(IT), and discover a passion for cybersecurity. View my projects in HTML/CSS/JS, C#, PHP, .Net, Java, and Python. Connect with me for collaboration and let's code something amazing together!">
-    <link rel="shortcut icon"
-    href="img/icon.jpg"
-    type="image/x-icon">
-    <!-- SEO End  -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://unpkg.com/scrollreveal@4/dist/scrollreveal.min.js"></script>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css">
-    <script src="https://cdn.tailwindcss.com?plugins=forms,typography,aspect-ratio,line-clamp"></script>
-    <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
-    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
-    <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/alpinejs@2.8.2/dist/alpine.min.js" defer></script>
-    <script src="https://static-bundles.visme.co/forms/vismeforms-embed.js"></script>
-    <link rel="stylesheet" href="styles.css">
-    <title>Kushal Pipaliya - Web Developer and Pentester</title>
+   <!-- SEO Meta Tags -->
+   <meta name="author" content="Kushal Pipaliya">
+   <meta property="og:url" content="https://kushalhportfolio.netlify.app/">
+   <meta property="og:title" content="Kushal Pipaliya - Web Developer and Pentester">
+   <meta property="og:image" content="img/fmy2.png">
+   <meta property="og:type" content="portfolio">
+   <meta property="og:site_name" content="KH.Pipaliya, kushal-portfolio">
+   <meta property="og:description" content="Explore the impressive portfolio of Kushal Pipaliya, a skilled Web Developer and Penetration Tester. Connect with me for collaboration and let's code something amazing together!">
+   <meta property="og:locale" content="en_IN">
+   <meta name="robots" content="index, follow">
+   <meta name="keywords" content="web development, penetration testing, coding, programming, cybersecurity, ethical hacking, problem-solving, communication skills, IT professional, Kushal Pipaliya portfolio, KH portfolio, innovative coding, web security">
+   <link rel="manifest" href="/manifest.json">
+   <!-- End of SEO Meta Tags -->
+
+   <!-- External Scripts and Styles -->
+   <script src="https://unpkg.com/scrollreveal@4/dist/scrollreveal.min.js"></script>
+   <script src="https://cdn.tailwindcss.com?plugins=forms,typography,aspect-ratio,line-clamp"></script>
+   <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
+   <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
+   <script src="https://cdn.jsdelivr.net/npm/alpinejs@2.8.2/dist/alpine.min.js" defer></script>
+   <script src="https://static-bundles.visme.co/forms/vismeforms-embed.js"></script>
+   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css">
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
+   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css">
+   <link rel="stylesheet" href="styles.css">
+
+   <title>Kushal Pipaliya - Web Developer and Pentester</title>
 </head>
 <body class="bg-black">
     <div id="loader" class="center"></div>
@@ -224,13 +223,12 @@
             <div class="border-t-2 border-[#237d07] w-1/4 md:w-16"></div>
         </div>
     </div>
-
     <!-- Project Details -->
     <section class="flex items-center justify-center md:h-screen section bg-black text-white fade-in"
         id="mywork-section">
         <div class="max-w-screen-lg w-full">
             <div class="text-center p-4">
-                <h2 class="text-5xl text-[#237d07] font-serif mb-4">My Work</h2>
+                <h2 class="text-5xl text-[#237d07] mb-4">My Work</h2>
                 <div class="grid grid-cols-1 mt-5 text-gray-400 md:grid-cols-2 lg:grid-cols-3 gap-4 font-sans">
                     <div
                         class="bg-black rounded-lg overflow-hidden shadow-md transition-transform transform hover:scale-105">
@@ -238,7 +236,7 @@
                             src="https://www.svgrepo.com/show/261945/web-development.svg" alt="HTML/CSS/JS">
                         <div class="p-2">
                             <h3 class="text-md md:text-lg font-bold mb-1">HTML/CSS/JS Project</h3>
-                            <p class="text-xs text-gray-500">View My GitHub...!</p>
+                            <a href="https://www.github.com/Kushal129/" class="text-xs text-gray-500 hover:text-gray-300">View My GitHub...!</a>
                         </div>
                     </div>
 
@@ -248,7 +246,7 @@
                             src="https://cdn.worldvectorlogo.com/logos/c--4.svg" alt="C#">
                         <div class="p-2">
                             <h3 class="text-md md:text-lg font-bold mb-1">C# Project</h3>
-                            <p class="text-xs text-gray-500">View My GitHub...!</p>
+                            <a href="https://www.github.com/Kushal129/" class="text-xs text-gray-500 hover:text-gray-300">View My GitHub...!</a>
                         </div>
                     </div>
 
@@ -258,7 +256,7 @@
                             alt="PHP">
                         <div class="p-2">
                             <h3 class="text-md md:text-lg font-bold mb-1">PHP Project</h3>
-                            <p class="text-xs text-gray-500">View My GitHub...!</p>
+                            <a href="https://www.github.com/Kushal129/" class="text-xs text-gray-500 hover:text-gray-300">View My GitHub...!</a>
                         </div>
                     </div>
 
@@ -268,7 +266,7 @@
                             src="https://upload.wikimedia.org/wikipedia/commons/e/ee/.NET_Core_Logo.svg" alt=".Net">
                         <div class="p-2">
                             <h3 class="text-md md:text-lg font-bold mb-1">.Net Project</h3>
-                            <p class="text-xs text-gray-500">View My GitHub...!</p>
+                            <a href="https://www.github.com/Kushal129/" class="text-xs text-gray-500 hover:text-gray-300">View My GitHub...!</a>
                         </div>
                     </div>
 
@@ -278,7 +276,7 @@
                             src="https://cdn.worldvectorlogo.com/logos/java-4.svg" alt="Java">
                         <div class="p-2">
                             <h3 class="text-md md:text-lg font-bold mb-1">Java Project</h3>
-                            <p class="text-xs text-gray-500">View My GitHub...!</p>
+                            <a href="https://www.github.com/Kushal129/" class="text-xs text-gray-500 hover:text-gray-300">View My GitHub...!</a>
                         </div>
                     </div>
 
@@ -288,7 +286,7 @@
                             src="https://www.svgrepo.com/show/452091/python.svg" alt="Python">
                         <div class="p-2">
                             <h3 class="text-md md:text-lg font-bold mb-1">Python Project</h3>
-                            <p class="text-xs text-gray-500">View My GitHub...!</p>
+                            <a href="https://www.github.com/Kushal129/" class="text-xs text-gray-500 hover:text-gray-300">View My GitHub...!</a>
                         </div>
                     </div>
                 </div>
@@ -397,61 +395,43 @@
 </body>
 
 <script>
-    var toaster = document.getElementById('toaster');
-    var message = document.getElementById('toast-message');
-    var form = document.getElementById("my-form");
-    var submitButton = form.querySelector("button[type='submit']");
-    toaster.classList.add('hidden');
-    function showToaster(str) {
-        message.innerText = str || "Success! Your message has been sent.";
-        toaster.classList.remove('hidden');
-        setTimeout(function () {
-            toaster.classList.add('hidden');
-        }, 8000);
-    }
+    // var toaster = document.getElementById('toaster');
+    // var message = document.getElementById('toast-message');
+    // var form = document.getElementById("my-form");
+    // // var submitButton = form.querySelector("button[type='submit']");
+    // toaster.classList.add('hidden');
+    // function showToaster(str) {
+    //     message.innerText = str || "Success! Your message has been sent.";
+    //     toaster.classList.remove('hidden');
+    //     setTimeout(function () {
+    //         toaster.classList.add('hidden');
+    //     }, 8000);
+    // }
 
-    async function handleSubmit(event) {
-        event.preventDefault();
-        var status = document.getElementById("my-form-status");
-        var data = new FormData(event.target);
-        fetch(event.target.action, {
-            method: form.method,
-            body: data,
-            headers: {
-                'Accept': 'application/json'
-            }
-        }).then(response => {
-            if (response.ok) {
-                showToaster("Thanks for Contacting us..! We Will Contact You Soon..!");
-                form.reset();
-            }
-        }).catch(error => {
-            status.innerHTML = "Oops! There was a problem submitting your form";
-        });
-    }
-    form.addEventListener("submit", handleSubmit);
+    // async function handleSubmit(event) {
+    //     event.preventDefault();
+    //     var status = document.getElementById("my-form-status");
+    //     var data = new FormData(event.target);
+    //     fetch(event.target.action, {
+    //         method: form.method,
+    //         body: data,
+    //         headers: {
+    //             'Accept': 'application/json'
+    //         }
+    //     }).then(response => {
+    //         if (response.ok) {
+    //             showToaster("Thanks for Contacting us..! We Will Contact You Soon..!");
+    //             form.reset();
+    //         }
+    //     }).catch(error => {
+    //         status.innerHTML = "Oops! There was a problem submitting your form";
+    //     });
+    // }
+    // form.addEventListener("submit", handleSubmit);
 
     // submitButton.addEventListener("click", function () {
     //     showToaster("Please wait..."); // Display toaster when the button is clicked
     // });
 </script>
 
-<!-- JSON-LD (JavaScript Object Notation for Linked Data) -->
-<script type="application/ld+json">
-    {
-       "@context": "http://schema.org",
-       "@type": "Person",
-       "name": "Kushal Pipaliya",
-       "jobTitle": "Web Developer and Ethical Hacker or Pentester",
-       "url": "https://kushalportfolio.vercel.app/",
-       "sameAs": [
-          "https://www.linkedin.com/in/kushal-pipaliya",
-          "https://www.github.com/Kushal129",
-          "https://www.instagram.com/_kushal_pipaliya/"
-       ],
-       "worksFor": "KH-Development",
-       "description": "Passionate Web Developer and Ethical Hacker and Pentester with expertise in HTML, CSS, JavaScript, C#, Java, Python, and more. Bachelor's Degree in B.Sc(IT). Excited about creating innovative digital solutions and exploring cybersecurity.",
-       "image": "img/fmy2.png",
-    }
-    </script>
 </html>
