Mobile View bug solve

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
    <!-- End of SEO Meta Tags -->
 
    <!-- External Scripts and Styles -->
+   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
    <script src="https://unpkg.com/scrollreveal@4/dist/scrollreveal.min.js"></script>
    <script src="https://cdn.tailwindcss.com?plugins=forms,typography,aspect-ratio,line-clamp"></script>
    <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
