--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css">
    <link rel="stylesheet" href="styles.css">
-
+   <link rel="icon" href="img/icon.jpg">
    <title>Kushal Pipaliya - Web Developer and Pentester</title>
 </head>
 <body class="bg-black">
