--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
    <!-- End of SEO Meta Tags -->
 
    <!-- External Scripts and Styles -->
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
    <script src="https://unpkg.com/scrollreveal@4/dist/scrollreveal.min.js"></script>
    <script src="https://cdn.tailwindcss.com?plugins=forms,typography,aspect-ratio,line-clamp"></script>
    <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
@@ -77,8 +77,8 @@
                 </div>
             </div>
             <div class="w-full md:w-1/2 lg:w-1/2 p-4">
-                <img src="img/fmy2.png" alt="Kushal Pipaliya - Web Developer and Pentester" class="w-full h-auto rounded-md mb-4">
-            </div>
+                <img src="img/fmy2.png" alt="Kushal Pipaliya - Web Developer and Pentester" class="w-full h-auto rounded-md mb-4 ml-5">
+            </div>            
         </div>
     </section>
     <hr class="w-4/5 mx-auto fade-in mb-5">
@@ -127,6 +127,7 @@
         </div>
     </section>
     <hr class="w-4/5 mx-auto fade-in mb-5">
+
     <div class="text-center mt-5 pb-5 section" id="about-section">
         <h1 class="text-5xl font-bold mb-2">About</h1>
         <section class="container mx-auto p-8 flex flex-col md:flex-row">
@@ -145,19 +146,20 @@
                         and a genuine curiosity to understand the intricacies of web development.
                         Join me as I embark on this exciting adventure in the realm of coding!
                     </p>
+
                 </div>
                 <div>
                     <div class="border border-green-700 p-2 rounded-md bg-zinc-950 fade-in">
                         <pre class="p-3 text-left text-white">
 <span class="text-red-700">$</span><span class="text-violet-800">root:\cd\Skills</span>
     - HTML5
-    - CSS3 / Tailwind CSS
+    - Tailwind CSS
     - JavaScript
     - Java
     - C#
     - PHP
+    - Python
     - ASP.Net
-    - Servlet
     - Mysql
     - and much more<span class="animate-blink-dot text-gray-400">.</span><span class="animate-blink-dot text-gray-400">.</span><span class="animate-blink-dot text-gray-400">.</span>
                 </div>
@@ -218,7 +220,7 @@
 
         <div class="flex items-center justify-center mt-4">
             <div class="border-t-2 border-[#237d07] w-1/4 md:w-16"></div>
-            <p class="text-lg md:text-2xl text-[#237d07] mx-4">Stay Inspired</p>
+            <p class="text-2xl text-[#237d07] mx-4">Stay Inspired</p>
             <div class="border-t-2 border-[#237d07] w-1/4 md:w-16"></div>
         </div>
     </div>
@@ -227,7 +229,7 @@
         id="mywork-section">
         <div class="max-w-screen-lg w-full">
             <div class="text-center p-4">
-                <h1 class="text-5xl text-[#237d07] mb-4">My Work</h1>
+                <h1 class="text-5xl font-bold text-[#237d07] mb-4">My Work</h1>
                 <div class="grid grid-cols-1 mt-5 text-gray-400 md:grid-cols-2 lg:grid-cols-3 gap-4 font-sans">
                     <div
                         class="bg-black rounded-lg overflow-hidden shadow-md transition-transform transform hover:scale-105">
@@ -259,26 +261,27 @@
                     <div
                         class="bg-black rounded-lg overflow-hidden shadow-md transition-transform transform hover:scale-105">
                         <a href="https://www.github.com/Kushal129/" class="text-xs text-gray-500 hover:text-gray-300"></a><img class="w-full h-32 md:h-16 object-center"
-                            src="https://upload.wikimedia.org/wikipedia/commons/e/ee/.NET_Core_Logo.svg" alt=".Net"></a>
-                        <div class="p-2">
-                            <h3 class="text-md md:text-lg font-bold mb-1">.Net Projects</h3>
+                            src="https://upload.wikimedia.org/wikipedia/commons/e/ee/.NET_Core_Logo.svg" alt=".Net">
+                        <div class="p-2"></a>
+                            <h3 class="text-md md:text-lg font-bold mb-1">.Net Project</h3>
                         </div>
                     </div>
 
                     <div
                         class="bg-black rounded-lg overflow-hidden shadow-md transition-transform transform hover:scale-105">
-                        <a href="https://www.github.com/Kushal129/" class="text-xs text-gray-500 hover:text-gray-300"> <img class="w-full h-32 md:h-16 object-center"
-                            src="https://cdn.worldvectorlogo.com/logos/java-4.svg" alt="Java"></a>
-                        <div class="p-2">
-                            <h3 class="text-md md:text-lg font-bold mb-1">Java Projects</h3>
+                        <a href="https://www.github.com/Kushal129/" class="text-xs text-gray-500 hover:text-gray-300"></a><img class="w-full h-32 md:h-16 object-center"
+                            src="https://cdn.worldvectorlogo.com/logos/java-4.svg" alt="Java">
+                        <div class="p-2"></a>
+                            <h3 class="text-md md:text-lg font-bold mb-1">Java Project</h3>
                         </div>
                     </div>
+
                     <div
                         class="bg-black rounded-lg overflow-hidden shadow-md transition-transform transform hover:scale-105">
-                        <a href="https://www.github.com/Kushal129/" class="text-xs text-gray-500 hover:text-gray-300"><img class="w-full h-32 md:h-16 object-center"
+                        <a href="https://www.github.com/Kushal129/" class="text-xs text-gray-500 hover:text-gray-300"></a><img class="w-full h-32 md:h-16 object-center"
                             src="https://www.svgrepo.com/show/452091/python.svg" alt="Python"></a>
                         <div class="p-2">
-                            <h3 class="text-md md:text-lg font-bold mb-1">Python Projects</h3>
+                            <h3 class="text-md md:text-lg font-bold mb-1">Python Project</h3>
                         </div>
                     </div>
                 </div>
@@ -286,10 +289,11 @@
         </div>
     </section>
     <section class="ftco-section contact-section ftco-no-pb bg-black text-[#237d07]" id="contact-section">
-        <div class="row justify-content-center mb-5 pb-3">
-                <div class="col-md-7 heading-section text-center ftco-animate fadeInUp ftco-animated">
+        <div class="container">
+            <div class="row justify-content-center mb-5 pb-3">
+                <div class="col-md-7 heading-section text-center ftco-animate fadeInUp ftco-animated mt-3">
                     <h1 class="text-5xl">Contact</h1>
-                    <p>Get in touch for collaboration, support, or any inquiries - let's bring your vision to life!</p>
+                    <p class="mt-2">Get in touch for collaboration, support, or any inquiries - let's bring your vision to life!</p>
                 </div>
             </div>
             <div class="container mx-auto bg-black mt-10 p-4">
@@ -300,21 +304,21 @@
                             <div class="mb-4">
                                 <label for="name" class="block text-1xl font-bold mb-2">Your Name:</label>
                                 <input type="text" id="name" name="name" autocomplete="off" placeholder="KH....."
-                                    class="w-full px-3 py-2 border-2 rounded shadow-md bg-black text-[#237d07] focus:outline-none focus:border-green-500 focus:ring-0" required>
+                                    class="w-full px-3 py-2 border-2 rounded shadow-md bg-black text-[#237d07] focus:outline-none focus:border-green-500 focus:ring-0">
                             </div>
 
                             <div class="mb-4">
                                 <label for="email" class="block text-1xl font-bold mb-2">Your
                                     Email:</label>
                                 <input type="email" id="email" name="email" placeholder="abc@example.com"
-                                    class="w-full px-3 py-2 border-2 rounded shadow-md bg-black text-[#237d07] focus:outline-none focus:border-green-500 focus:ring-0" required>
+                                    class="w-full px-3 py-2 border-2 rounded shadow-md bg-black text-[#237d07] focus:outline-none focus:border-green-500 focus:ring-0">
                             </div>
 
                             <div class="mb-4">
                                 <label for="message" class="block text-1xl font-bold mb-2">Your
                                     Message:</label>
                                 <textarea id="message" name="message" rows="4" placeholder="Write your message here..."
-                                    class="w-full px-3 py-2 border-2 rounded shadow-md bg-black text-[#237d07] focus:outline-none focus:border-green-500 focus:ring-0" required></textarea>
+                                    class="w-full px-3 py-2 border-2 rounded shadow-md bg-black text-[#237d07] focus:outline-none focus:border-green-500 focus:ring-0"></textarea>
                             </div>
 
                             <div class="mb-4">
@@ -326,7 +330,7 @@
                     </div>
                     <div class="w-full md:w-1/3 px-4">
                         <div class="bg-black p-8 rounded shadow-md">
-                            <h3 class="text-2xl font-semibold mb-4">KUSHAL PIPALIYA</h3>
+                            <h3 class="text-3xl text-center font-semibold mb-4">KUSHAL PIPALIYA</h3>
                             <p class="text-1xl mb-2">Address: <a
                                     class="text-gray-500 hover:text-white focus:text-[#237d07]"
                                     href="https://maps.app.goo.gl/sKMHbJfC7rdbQHNU7">Katargam, Surat, Gujarat, IN</a>
@@ -340,14 +344,13 @@
                     </div>
                 </div>
             </div>
-        <!-- <div class="container">
-            <div class="visme_d" data-title="portfolio" data-url="eprmwv11-portfolio" data-domain="forms"
+            <!-- <div class="visme_d" data-title="portfolio" data-url="eprmwv11-portfolio" data-domain="forms"
                 data-full-page="false" data-min-height="500px" data-form-id="15538"></div>
         </div> -->
     </section>
 
-    <section class="bg-black p-8 mt-8 section" id="footer-section">
     <div class="relative fade-in">
+        <section class="bg-black p-8 mt-8 section" id="footer-section">
             <div class="mx-auto text-center p-5 text-black z-10 relative">
                 <div class="flex items-center justify-center mb-4">
                     <a href="https://www.github.com/Kushal129" class="mx-2 footer-icon">
@@ -378,13 +381,13 @@
             <div
                 class="before:absolute before:inset-x-0 before:top-0 before:h-6 before:bg-gradient-to-t before:from-[#049309] before:to-transparent before:opacity-70 animate-pulse">
             </div>
-        </div>
-    </section>
-<div id="toaster" class="toaster">
-    <span id="toast-message" class="message"></span>
-</div>
+        </section>
+    </div>
+    <div id="toaster" class="toaster">
+        <span id="toast-message" class="message"></span>
+    </div>
     <script src="script.js"></script>
-</body>
+
 
 <script>
     var toaster = document.getElementById('toaster');
@@ -392,7 +395,6 @@
     var form = document.getElementById("my-form");
     var submitButton = form.querySelector("button[type='submit']");
     toaster.classList.add('hidden');
-
     function showToaster(str) {
         message.innerText = str || "Success! Your message has been sent.";
         toaster.classList.remove('hidden');
@@ -405,35 +407,26 @@
         event.preventDefault();
         var status = document.getElementById("my-form-status");
         var data = new FormData(event.target);
-        
-        submitButton.setAttribute("disabled", true); 
-
-        try {
-            var response = await fetch(event.target.action, {
-                method: form.method,
-                body: data,
-                headers: {
-                    'Accept': 'application/json'
-                }
-            });
-
+        fetch(event.target.action, {
+            method: form.method,
+            body: data,
+            headers: {
+                'Accept': 'application/json'
+            }
+        }).then(response => {
             if (response.ok) {
                 showToaster("Thanks for Contacting us..! We Will Contact You Soon..!");
                 form.reset();
             }
-        } catch (error) {
+        }).catch(error => {
             status.innerHTML = "Oops! There was a problem submitting your form";
-        } finally {
-            submitButton.removeAttribute("disabled"); 
-        }
+        });
     }
-
     form.addEventListener("submit", handleSubmit);
 
     submitButton.addEventListener("click", function () {
         showToaster("Please wait...");
     });
 </script>
-
-
+</body>
 </html>
