--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
    <!-- SEO Meta Tags -->
-   <meta name="author" content="Kushal Pipaliya">
-   <meta property="og:url" content="https://kushalhportfolio.netlify.app/">
-   <meta property="og:title" content="Kushal Pipaliya - Web Developer and Pentester">
+   <meta name="author" content="Kushal Pipaliya Portfolio">
+   <meta property="og:url" content="https://kushalpipaliyaportfolio.netlify.app/">
+   <meta property="og:title" content="Kushal Pipaliya | Portfolio">
    <meta property="og:image" content="img/fmy2.png">
    <meta property="og:type" content="portfolio">
    <meta property="og:site_name" content="KH.Pipaliya, kushal-portfolio">
@@ -28,7 +28,7 @@
    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css">
    <link rel="stylesheet" href="styles.css">
    <link rel="icon" href="img/icon.jpg">
-   <title>Kushal Pipaliya - Web Developer and Pentester</title>
+   <title>Kushal Pipaliya | Portfolio</title>
 </head>
 <body class="bg-black">
     <div id="loader" class="center"></div>
@@ -304,21 +304,21 @@
                             <div class="mb-4">
                                 <label for="name" class="block text-1xl font-bold mb-2">Your Name:</label>
                                 <input type="text" id="name" name="name" autocomplete="off" placeholder="KH....."
-                                    class="w-full px-3 py-2 border-2 rounded shadow-md bg-black text-[#237d07] focus:outline-none focus:border-green-500 focus:ring-0">
+                                    class="w-full px-3 py-2 border-2 rounded shadow-md bg-black text-[#237d07] focus:outline-none focus:border-green-500 focus:ring-0" required>
                             </div>
 
                             <div class="mb-4">
                                 <label for="email" class="block text-1xl font-bold mb-2">Your
                                     Email:</label>
                                 <input type="email" id="email" name="email" placeholder="abc@example.com"
-                                    class="w-full px-3 py-2 border-2 rounded shadow-md bg-black text-[#237d07] focus:outline-none focus:border-green-500 focus:ring-0">
+                                    class="w-full px-3 py-2 border-2 rounded shadow-md bg-black text-[#237d07] focus:outline-none focus:border-green-500 focus:ring-0" required>
                             </div>
 
                             <div class="mb-4">
                                 <label for="message" class="block text-1xl font-bold mb-2">Your
                                     Message:</label>
                                 <textarea id="message" name="message" rows="4" placeholder="Write your message here..."
-                                    class="w-full px-3 py-2 border-2 rounded shadow-md bg-black text-[#237d07] focus:outline-none focus:border-green-500 focus:ring-0"></textarea>
+                                    class="w-full px-3 py-2 border-2 rounded shadow-md bg-black text-[#237d07] focus:outline-none focus:border-green-500 focus:ring-0" required></textarea>
                             </div>
 
                             <div class="mb-4">
@@ -396,12 +396,14 @@
     var submitButton = form.querySelector("button[type='submit']");
     toaster.classList.add('hidden');
     function showToaster(str) {
-        message.innerText = str || "Success! Your message has been sent.";
-        toaster.classList.remove('hidden');
-        setTimeout(function () {
-            toaster.classList.add('hidden');
-        }, 8000);
-    }
+    message.innerText = str || "Success! Your message has been sent.";
+    toaster.classList.remove('hidden');
+    toaster.classList.add('visible');
+    setTimeout(function () {
+        toaster.classList.remove('visible');
+        toaster.classList.add('hidden');
+    },5000);
+}
 
     async function handleSubmit(event) {
         event.preventDefault();
@@ -424,9 +426,6 @@
     }
     form.addEventListener("submit", handleSubmit);
 
-    submitButton.addEventListener("click", function () {
-        showToaster("Please wait...");
-    });
 </script>
 </body>
 </html>
