--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
                     <div class="flex items-center">
                         <p class="text-3xl text-[#237d07] font-bold">My Work</p>
                     </div>
-                    <div class="flex space-x-2">
+                    <div class="flex items-center justify-between p-2 space-x-2">
                         <div class="w-4 h-4 rounded-full bg-yellow-500"></div>
                         <div class="w-4 h-4 rounded-full bg-blue-500"></div>
                         <div class="w-4 h-4 rounded-full bg-red-500"></div>
