--- a/index.html
+++ b/index.html
@@ -4,14 +4,13 @@
 <head>
     <!-- SEO Meta Tags -->
     <meta name="author" content="Kushal Pipaliya Portfolio">
-    <meta property="og:url" content="https://kushalpipaliyaportfolio.netlify.app/">
-    <meta property="og:title" content="Kushal Pipaliya | Portfolio">
-    <meta property="og:image" content="img/fmy2.png">
+    <meta property="url" content="https://kushalpipaliyaportfolio.netlify.app/">
+    <meta property="title" content="Kushal Pipaliya | Portfolio">
+    <meta property="image" content="img/fmy2.png">
     <meta property="og:type" content="portfolio">
-    <meta property="og:site_name" content="Kushal Pipaliya Portfolio">
-    <meta property="og:description"
-    content="Discover the diverse Portfolio of Kushal Pipaliya, a talented Web Developer with a passion for cybersecurity. Aspiring Penetration Tester and enthusiast in all things cyber. Let's connect and collaborate on safeguarding digital landscapes together!">
-    <meta property="og:locale" content="en_IN">
+    <meta property="name" content="Kushal Pipaliya Portfolio">
+    <meta name="description" content="Discover the diverse Portfolio of Kushal Pipaliya, a talented Web Developer with a passion for cybersecurity. Aspiring Penetration Tester and enthusiast in all things cyber. Let's connect and collaborate on safeguarding digital landscapes together!">
+    <meta property="locale" content="en_IN">
     <meta name="robots" content="index, follow">
     <meta name="keywords"
         content="Kushal-kp , Kushal pipaliya , kushal portfolio , Fronten development, penetration testing Beginner, coding, programming,problem-solving, communication skills, IT professional, Kushal Pipaliya, KH portfolio, innovative coding, web security, network security, information security, vulnerability assessment,secure coding practices, exploit development, reverse engineering, incident response, malware analysis, digital forensics, cryptography, network protocols, penetration testing tools, threat intelligence, security policies, risk management, security awareness training, cloud security, mobile security, social engineering, firewall configuration, intrusion detection, security certifications, code review, Kushal Pipaliya portfolio, Kushal Pipaliya projects, Kushal Pipaliya coder, Kushal Pipaliya developer, Kushal Pipaliya , Kushal Pipaliya web development, Kushal Pipaliya programming, Kushal Pipaliya ethical hacker, Kushal Pipaliya IT professional, Kushal Pipaliya problem solver, Kushal Pipaliya communication skills, Kushal Pipaliya innovative coder, Kushal Pipaliya coding skills, Kushal Pipaliya cybersecurity, Kushal Pipaliya Portfolio" />
