--- a/index.html
+++ b/index.html
@@ -167,6 +167,7 @@
     - Python
     - ASP.Net
     - Mysql
+    - SEO
     - and much more<span class="animate-blink-dot text-gray-400">.</span><span class="animate-blink-dot text-gray-400">.</span><span class="animate-blink-dot text-gray-400">.</span>
                 </div>
             </div>
