--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta property="image" content="img/fmy2.png">
     <meta property="og:type" content="portfolio">
     <meta property="name" content="Kushal Pipaliya Portfolio">
-    <meta name="description" content="Discover the diverse Portfolio of Kushal Pipaliya, a talented Web Developer with a passion for cybersecurity. Aspiring Penetration Tester and enthusiast in all things cyber. Let's connect and collaborate on safeguarding digital landscapes together!">
+    <meta name="description" content="Kushal Pipaliya: Web Developer with a passion for cybersecurity. Aspiring Penetration Tester, Create or Securing digital landscapes.">
     <meta property="locale" content="en_IN">
     <meta name="robots" content="index, follow">
     <meta name="keywords"
@@ -91,7 +91,7 @@
     <section class="flex justify-center mt-5 mb-8 section" id="resume-section">
         <div class="max-w-2xl w-full mx-auto">
             <div class="text-center pb-5 fade-in-right">
-                <h1 class="text-5xl font-bold mb-2">Resume</h1>
+                <b class="text-5xl font-bold mb-2">Resume</b>
                 <p class="text-gray-400">Embark on a journey through a realm of rich experiences, profound expertise,
                     and a commitment to
                     education. Witness the unfolding of achievements and the brilliance of honed skills. Delve into the
@@ -135,7 +135,7 @@
     <hr class="w-4/5 mx-auto fade-in mb-5">
 
     <div class="text-center mt-5 pb-5 section" id="about-section">
-        <h1 class="text-5xl font-bold mb-2">About</h1>
+        <b class="text-5xl font-bold mb-2">About</b>
         <section class="container mx-auto p-8 flex flex-col md:flex-row">
             <div class="flex-1 mb-8 md:mr-6 fade-in">
                 <div class="mb-4">
@@ -309,7 +309,7 @@
         <div class="container">
             <div class="row justify-content-center mb-5 pb-3">
                 <div class="col-md-7 heading-section text-center ftco-animate fadeInUp ftco-animated mt-3">
-                    <h1 class="text-5xl">Contact</h1>
+                    <b class="text-5xl">Contact</b>
                     <p class="mt-2">Get in touch for collaboration, support, or any inquiries - let's bring your vision
                         to life!</p>
                 </div>
@@ -356,8 +356,8 @@
                                     class="text-gray-500 hover:text-white focus:text-[#237d07]"
                                     href="https://maps.app.goo.gl/sKMHbJfC7rdbQHNU7">Katargam, Surat, Gujarat, IN</a>
                             </p>
-                            <p class="text-1xl mb-2">Phone: <a href="tel:+919574476496"
-                                    class="text-gray-500 hover:text-white focus:text-[#237d07]">+91 9574476496</a></p>
+                            <p class="text-1xl mb-2">Phone:<a href="tel:+919574476496"
+                                    class="text-gray-500 hover:text-white focus:text-[#237d07]"> +91 9574476496</a></p>
                             <p class="mb-2">Email: <a href="mailto:kushalhpipaliya01@gmail.com"
                                     class="text-gray-500 hover:text-white focus:text-[#237d07]">kushalhpipaliya01@gmail.com</a>
                             </p>
