--- a/index.html
+++ b/index.html
@@ -74,9 +74,12 @@
                             class="block bg-[#237d07] text-white font-bold py-3 px-8 rounded-full transition duration-300 ease-in-out hover:bg-[#299f04]">
                             Get in Touch
                         </a>
-                        <a href="#mywork-section"
+                        <!-- <a href="#mywork-section"
                             class="block bg-transparent text-[#237d07] border-1 border-[#237d07] py-3 px-6 rounded-full transition duration-300 ease-in-out hover:text-[#299f04] hover:border-[#299f04]">
                             My Works
+                        </a> -->
+                        <a href="my_resume.pdf" download class="block bg-transparent text-[#237d07] border-1 border-[#237d07] py-3 px-6 rounded-full transition duration-300 ease-in-out hover:text-[#299f04] hover:border-[#299f04]">
+                            Download Resume
                         </a>
                     </div>
                 </div>
