init resume new file nam

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                             class="block bg-transparent text-[#237d07] border-1 border-[#237d07] py-3 px-6 rounded-full transition duration-300 ease-in-out hover:text-[#299f04] hover:border-[#299f04]">
                             My Works
                         </a> -->
-                        <a href="my_resume.pdf" download class="block bg-transparent text-[#237d07] border-1 border-[#237d07] py-3 px-6 rounded-full transition duration-300 ease-in-out hover:text-[#299f04] hover:border-[#299f04]">
+                        <a href="kushal_resume.pdf" download class="block bg-transparent text-[#237d07] border-1 border-[#237d07] py-3 px-6 rounded-full transition duration-300 ease-in-out hover:text-[#299f04] hover:border-[#299f04]">
                             Download Resume
                         </a>
                     </div>
